[package]
name = "ceiling-macros"
version = "0.1.2"
edition = "2021"
description = "Macros for the ceiling crate"
license = "MIT"
repository = "https://github.com/mrvillage/ceiling"
documentation = "https://docs.rs/ceiling"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["derive", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
rand = "0.8"
