[package]
name = "ceiling"
version = "0.1.3"
edition = "2021"
description = "A simple, lightweight, and highly configurable library for handling and creating rate limiting rules."
license = "MIT"
repository = "https://github.com/mrvillage/ceiling"
documentation = "https://docs.rs/ceiling"
readme = "../readme.MD"

[dependencies]
dashmap = "5"
ceiling-macros = { path = "../ceiling-macros", version = "0.1" }
sero = "0.1"
async-trait = { version = "0.1", optional = true }
serde = { version = "1.0", optional = true }

[features]
default = []
async = ["dep:async-trait"]
